# blackbox

./: AGENTS.md  Cargo.toml  Makefile  devenv.nix  flake.nix  result
config/: default.toml
crates/blackbox-admin/: Cargo.toml
crates/blackbox-admin/src/: lib.rs  main.rs
crates/blackbox-assets-server/: Cargo.toml
crates/blackbox-assets-server/src/: asset.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  server.rs
crates/blackbox-auth/: Cargo.toml
crates/blackbox-auth/src/: auth_manager.rs  auth_provider.rs  auth_store.rs  claims.rs  dev_bypass.rs  error.rs  facebook.rs  jwt.rs  lib.rs  util.rs
crates/blackbox-auth/tests/: auth_manager_test.rs  auth_store_test.rs
crates/blackbox-cli/: Cargo.toml
crates/blackbox-cli/src/: main.rs
crates/blackbox-core/: Cargo.toml
crates/blackbox-core/src/: catalogs.rs  clock.rs  config.rs  constants.rs  error.rs  lib.rs
crates/blackbox-dev/: Cargo.toml
crates/blackbox-dev/src/: main.rs
crates/blackbox-diff-sync/: Cargo.toml
crates/blackbox-diff-sync/src/: diff.rs  diff_set.rs  key_fields.rs  lib.rs  proto.rs
crates/blackbox-game-server/: Cargo.toml
crates/blackbox-game-server/src/: command.rs  config.rs  error.rs  event.rs  handlers.rs  interceptor.rs  lib.rs  main.rs
crates/blackbox-game-server/src/actors/: gacha_actor.rs  mod.rs  quest_actor.rs  user_actor.rs
crates/blackbox-master-data/: Cargo.toml  build.rs
crates/blackbox-master-data/src/: binary.rs  lib.rs
crates/blackbox-master-data/src/schema/: mod.rs
crates/blackbox-observability/: Cargo.toml
crates/blackbox-observability/src/: lib.rs  tracing.rs
crates/blackbox-store/: Cargo.toml
crates/blackbox-store/src/: config.rs  database.rs  error.rs  lib.rs  master_data.rs  user.rs
crates/schema/: Cargo.toml
crates/schema/src/: codegen.rs  lib.rs  parser.rs
docs/: COMPONENTS.md  INTERFACES.md  KANBAN.md  TESTING.md
octo-proto/: Cargo.toml  build.rs
octo-proto/proto/: octo.proto
octo-proto/proto/apb/api/: admin.proto  banner.proto  battle.proto  bighunt.proto  cageornament.proto  character.proto  characterboard.proto  characterreward.proto  characterviewer.proto  companion.proto  config.proto  consumableitem.proto  contentsstory.proto  costume.proto  data.proto  deck.proto  dokan.proto  explore.proto  friend.proto  gacha.proto  gameplay.proto  gift.proto  gimmick.proto  labyrinth.proto  loginbonus.proto  material.proto  mission.proto  movie.proto  navicutin.proto  notification.proto  omikuji.proto  parts.proto  portalcage.proto  quest.proto  reward.proto  shop.proto  sidestoryquest.proto  tutorial.proto  user.proto  weapon.proto
octo-proto/src/: lib.rs
proto/: octo.proto
