[package]
name = "octo-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
# When enabled, uses prost-build to generate code from .proto files.
# When disabled (default), uses the hand-written types in src/lib.rs.
default = []
codegen = []
