[package]
name = "blackbox-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false


[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
blackbox-core = { path = "../blackbox-core" }
blackbox-master-data = { path = "../blackbox-master-data" }

[dev-dependencies]
