[package]
name = "blackbox-assets-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false


[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
blackbox-core = { path = "../blackbox-core" }
octo-proto = { path = "../../octo-proto" }

[dev-dependencies]
tempfile = "3"
