[package]
name = "blackbox-assets-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false


[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
sha1 = { workspace = true }
toml = { workspace = true }
http-body-util = "0.1"
blackbox-core = { path = "../blackbox-core" }

[dev-dependencies]
tempfile = "3"
