[package]
name = "blackbox-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
thiserror = { workspace = true }
tracing = { workspace = true }
blackbox-core = { path = "../blackbox-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"
hex = "0.4"
rand = "0.8"
reqwest = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
