[package]
name = "blackbox-diff-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
blackbox-core = { path = "../blackbox-core" }
blackbox-store = { path = "../blackbox-store" }

[dev-dependencies]
