[package]
name = "blackbox-master-data"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[dependencies]
aes = { workspace = true }
cbc = { workspace = true }
lz4 = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
quote = "1"
syn = "2"
proc-macro2 = "1"

[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
insta = { workspace = true }
