[package]
name = "blackbox-master-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
codegen = []

[dependencies]
blackbox-schema.path = "../schema"
bytes.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
blackbox-schema.path = "../schema"
serde_json.workspace = true

[[bin]]
name = "gen-entities"
path = "src/bin/gen_entities.rs"
