[package]
name = "blackbox-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
