[package]
name = "blackbox-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
arc-swap.workspace = true
rmp-serde.workspace = true
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blackbox-core = { path = "../blackbox-core" }
blackbox-schema = { path = "../schema" }
blackbox-master-data = { path = "../blackbox-master-data" }

[dev-dependencies]
tempfile = "3"
